fix footer spacing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,4 +12,5 @@ main {
     flex-direction: column;
     overflow: hidden;
     width: 100%;
+    margin-bottom: 60px;
 }
